--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.TuneIn"
         tools:targetApi="31">
         <activity
+            android:name=".PostsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_posts"
+            android:theme="@style/Theme.TuneIn" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
