--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -27,6 +27,16 @@
             android:label="@string/title_activity_posts"
             android:theme="@style/Theme.TuneIn" />
         <activity
+            android:name=".FriendsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_friends"
+            android:theme="@style/Theme.TuneIn" />
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false"
+            android:label="@string/title_activity_profile"
+            android:theme="@style/Theme.TuneIn" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
