--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -47,8 +47,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignupActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".SignupActivity" android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".LoginActivity" android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
