--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
             android:name=".FriendsActivity"
             android:exported="false"
             android:label="@string/title_activity_friends"
-            android:theme="@style/Theme.TuneIn" />
+            android:theme="@style/Theme.TuneIn"
+            android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".ProfileActivity"
             android:exported="false"
@@ -39,7 +40,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.TuneIn">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
