--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -37,6 +37,11 @@
             android:label="@string/title_activity_profile"
             android:theme="@style/Theme.TuneIn" />
         <activity
+            android:name=".SettingsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings"
+            android:theme="@style/Theme.TuneIn" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
