--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "drizzle-zod": "^0.5.1",
     "fastify": "^4.26.0",
     "fastify-type-provider-zod": "^1.1.9",
+    "firebase-admin": "^12.0.0",
     "npm": "^10.4.0",
     "zod": "^3.22.4"
   },
