--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "drizzle-orm": "^0.29.3",
     "drizzle-zod": "^0.5.1",
     "fastify": "^4.26.0",
+    "fastify-cron": "^1.3.1",
     "fastify-type-provider-zod": "^1.1.9",
     "firebase-admin": "^12.0.0",
     "npm": "^10.4.0",
